--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
     <html>
     <head>
-        <title>Hello title!</title>
+        <title style="color:blue;">Hello title!</title>
     </head>
     <body>
         Hello World
