--- a/index.html
+++ b/index.html
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
     <html>
     <head>
-        <title style="color:blue;">Hello title!</title>
+        <title>Hello title!</title>
     </head>
     <body>
+        <h1  style="color:blue;"> Welcome!</h1>
         Hello World
     </body>
     </html>
